src/tests/fixtures/typename/MethodTypename.ts.expected
-----------------
INPUT
----------------- 
/** @gqlType */
class User {
  __typename() {
    return "User";
  }
  /** @gqlField */
  name: string = "Alice";
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/typename/MethodTypename.ts:3:3 - error: Expected `__typename` to be a property declaration.

3   __typename() {
    ~~~~~~~~~~
